Fri Sep  6 02:37:22 2013  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: use double quotes when
	  strings start with special characters.
	  [Fixes GH-157] https://github.com/tenderlove/psych/issues/157

	* test/psych/test_string.rb: test for change.

Fri Sep  6 00:05:14 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (rewrite_cref_stack): remove recursion.

Thu Sep  5 18:05:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* string.c (fstring_cmp): take string encoding into account when
	  comparing fstrings [ruby-core:57037] [Bug #8866]

	* test/ruby/test_string.rb: add test

Thu Sep  5 17:25:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_fstring, rb_str_free): use st_data_t instead of VALUE.

	* string.c (rb_fstring): get rid of duplicating already frozen object.

	* parse.y (str_suffix_gen): freeze in advance to reduce objects.

Thu Sep  5 14:01:22 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/optparse.rb:  The Integer acceptable now allows binary and
	  hexadecimal numbers per the documentation.  [ruby-trunk - Bug #8865]

	  DecimalInteger, OctalInteger, DecimalNumeric now validate their input
	  before converting to a number.  [ruby-trunk - Bug #8865]

	* test/optparse/test_acceptable.rb:  Tests for the above, tests for all
	  numeric acceptables for existing behavior.

Thu Sep  5 13:49:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* include/ruby/ruby.h: add RSTRING_FSTR flag

	* internal.h: add rb_fstring() prototype

	* parse.y (str_suffix_gen): deduplicate frozen string literals

	* string.c (rb_fstring): deduplicate frozen string literals

	* string.c (rb_str_free): delete fstrings from frozen_strings table when
	  they are GC'd

	* string.c (Init_String): initialize frozen_strings table

	* test/ruby/test_string.rb: test frozen strings are deduplicated

Thu Sep  5 12:48:00 2013  Kenta Murata  <mrkn@cookpad.com>
